wxc/include/ewxw/wxc_glue.h

int        wxCalculateLayoutEvent_GetFlags( TSelf(wxCalculateLayoutEvent) _obj );
void       wxCalculateLayoutEvent_GetRect( TSelf(wxCalculateLayoutEvent) _obj, TRectOutVoid(_x,_y,_w,_h) );
void       wxCalculateLayoutEvent_SetFlags( TSelf(wxCalculateLayoutEvent) _obj, int flags );
void       wxCalculateLayoutEvent_SetRect( TSelf(wxCalculateLayoutEvent) _obj, TRect(x,y,w,h) );
/* wxLayoutAlgorithm */
TClassDefExtend(wxLayoutAlgorithm,wxObject)
TClass(wxLayoutAlgorithm) wxLayoutAlgorithm_Create(  );
void       wxLayoutAlgorithm_Delete( TSelf(wxLayoutAlgorithm) _obj );
int        wxLayoutAlgorithm_LayoutFrame( TSelf(wxLayoutAlgorithm) _obj, TClass(wxFrame) frame, void* mainWindow );
int        wxLayoutAlgorithm_LayoutMDIFrame( TSelf(wxLayoutAlgorithm) _obj, TClass(wxFrame) frame, TRect(x,y,w,h), int use );
int        wxLayoutAlgorithm_LayoutWindow( TSelf(wxLayoutAlgorithm) _obj, TClass(wxFrame) frame, void* mainWindow );
int        wxQueryLayoutInfoEvent_GetAlignment( TSelf(wxQueryLayoutInfoEvent) _obj );
int        wxQueryLayoutInfoEvent_GetFlags( TSelf(wxQueryLayoutInfoEvent) _obj );
int        wxQueryLayoutInfoEvent_GetOrientation( TSelf(wxQueryLayoutInfoEvent) _obj );
int        wxQueryLayoutInfoEvent_GetRequestedLength( TSelf(wxQueryLayoutInfoEvent) _obj );
void       wxQueryLayoutInfoEvent_GetSize( TSelf(wxQueryLayoutInfoEvent) _obj, TSizeOutVoid(_w,_h) );
void       wxQueryLayoutInfoEvent_SetAlignment( TSelf(wxQueryLayoutInfoEvent) _obj, int align );
void       wxQueryLayoutInfoEvent_SetFlags( TSelf(wxQueryLayoutInfoEvent) _obj, int flags );
void       wxQueryLayoutInfoEvent_SetOrientation( TSelf(wxQueryLayoutInfoEvent) _obj, int orient );
void       wxQueryLayoutInfoEvent_SetRequestedLength( TSelf(wxQueryLayoutInfoEvent) _obj, int length );
void       wxQueryLayoutInfoEvent_SetSize( TSelf(wxQueryLayoutInfoEvent) _obj, TSize(w,h) );
/* wxSashEvent */
TClassDefExtend(wxSashEvent,wxEvent)
TClass(wxSashEvent) wxSashEvent_Create( int id, int edge );
void       wxSashEvent_GetDragRect( TSelf(wxSashEvent) _obj, TRectOutVoid(_x,_y,_w,_h) );
int        wxSashEvent_GetDragStatus( TSelf(wxSashEvent) _obj );
int        wxSashEvent_GetEdge( TSelf(wxSashEvent) _obj );
void       wxSashEvent_SetDragRect( TSelf(wxSashEvent) _obj, TRect(x,y,w,h) );
void       wxSashEvent_SetDragStatus( TSelf(wxSashEvent) _obj, int status );
void       wxSashEvent_SetEdge( TSelf(wxSashEvent) _obj, int edge );
/* wxSashLayoutWindow */
TClassDefExtend(wxSashLayoutWindow,wxSashWindow)
TClass(wxSashLayoutWindow) wxSashLayoutWindow_Create( TClass(wxWindow) _par, int _id, TRect(_x,_y,_w,_h), int _stl );
int        wxSashLayoutWindow_GetAlignment( TSelf(wxSashLayoutWindow) _obj );
int        wxSashLayoutWindow_GetOrientation( TSelf(wxSashLayoutWindow) _obj );
void       wxSashLayoutWindow_SetAlignment( TSelf(wxSashLayoutWindow) _obj, int align );
void       wxSashLayoutWindow_SetDefaultSize( TSelf(wxSashLayoutWindow) _obj, TSize(w,h) );
void       wxSashLayoutWindow_SetOrientation( TSelf(wxSashLayoutWindow) _obj, int orient );
/* wxSashWindow */
TClassDefExtend(wxSashWindow,wxWindow)
TClass(wxSashWindow) wxSashWindow_Create( TClass(wxWindow) _par, int _id, TRect(_x,_y,_w,_h), int _stl );
int        wxSashWindow_GetDefaultBorderSize( TSelf(wxSashWindow) _obj );
int        wxSashWindow_GetEdgeMargin( TSelf(wxSashWindow) _obj, int edge );
int        wxSashWindow_GetExtraBorderSize( TSelf(wxSashWindow) _obj );
int        wxSashWindow_GetMaximumSizeX( TSelf(wxSashWindow) _obj );
int        wxSashWindow_GetMaximumSizeY( TSelf(wxSashWindow) _obj );
int        wxSashWindow_GetMinimumSizeX( TSelf(wxSashWindow) _obj );
int        wxSashWindow_GetMinimumSizeY( TSelf(wxSashWindow) _obj );
int        wxSashWindow_GetSashVisible( TSelf(wxSashWindow) _obj, int edge );
TBool      wxSashWindow_HasBorder( TSelf(wxSashWindow) _obj, int edge );
void       wxSashWindow_SetDefaultBorderSize( TSelf(wxSashWindow) _obj, int width );
void       wxSashWindow_SetExtraBorderSize( TSelf(wxSashWindow) _obj, int width );
void       wxSashWindow_SetMaximumSizeX( TSelf(wxSashWindow) _obj, int max );
void       wxSashWindow_SetMaximumSizeY( TSelf(wxSashWindow) _obj, int max );
void       wxSashWindow_SetMinimumSizeX( TSelf(wxSashWindow) _obj, int min );
void       wxSashWindow_SetMinimumSizeY( TSelf(wxSashWindow) _obj, int min );
void       wxSashWindow_SetSashBorder( TSelf(wxSashWindow) _obj, int edge, int border );
void       wxSashWindow_SetSashVisible( TSelf(wxSashWindow) _obj, int edge, int sash );